bootstrap added to the side-bar view

--- a/src/app/api-calls/api-calls.component.html
+++ b/src/app/api-calls/api-calls.component.html
@@ -1,5 +1,5 @@
-<ul>
+<ul class="nav nav-pills nav-stacked">
   <li *ngFor="let apiCall of apiCalls">
-    {{apiCall}}
+    <a href="#">{{apiCall}}</a>
   </li>
 </ul>
