--- a/src/app/api-calls/api-calls.component.html
+++ b/src/app/api-calls/api-calls.component.html
@@ -1,5 +1,14 @@
-<ul class="nav nav-pills nav-stacked">
-  <li *ngFor="let apiCall of apiCalls">
-    <a href="#">{{apiCall}}</a>
-  </li>
-</ul>
+<div class="container">
+  <div class="row">
+    <div class="col-md-4">
+      <ul class="nav nav-pills nav-stacked">
+        <li *ngFor="let apiCall of apiCalls">
+          <a href="#">{{apiCall}}</a>
+        </li>
+      </ul>
+    </div>
+    <div class="col-md-8">
+      call-detail-view
+    </div>
+  </div>
+</div>
