--- a/src/app/api-calls/api-calls.component.html
+++ b/src/app/api-calls/api-calls.component.html
@@ -2,7 +2,10 @@
   <div class="row">
     <div class="col-md-4">
       <ul class="nav nav-pills nav-stacked">
-        <li *ngFor="let apiCall of apiCalls">
+        <li *ngFor="let apiCall of apiCalls"
+          (click)="onSelect(apiCall)"
+          [class.active]="apiCall == selectedApiCall"
+          >
           <a href="#">{{apiCall}}</a>
         </li>
       </ul>
