api-calls(parent) component sends data to api-call(child) component

--- a/src/app/api-calls/api-calls.component.html
+++ b/src/app/api-calls/api-calls.component.html
@@ -6,12 +6,12 @@
           (click)="onSelect(apiCall)"
           [class.active]="apiCall == selectedApiCall"
           >
-          <a href="#">{{apiCall}}</a>
+          <a href="#">{{apiCall.name}}</a>
         </li>
       </ul>
     </div>
     <div class="col-md-8">
-      call-detail-view
+      <app-api-call *ngIf="selectedApiCall" [apiCall]="selectedApiCall"></app-api-call>
     </div>
   </div>
 </div>
