Api token extracted successfully

--- a/src/app/api-call/api-call.component.html
+++ b/src/app/api-call/api-call.component.html
@@ -1,7 +1,14 @@
-<p>
+<h3>
+  <label>ApiUrl : </label>
   {{apiCall.url}}
-</p>
+</h3>
+<h3>
+  <label>Token : </label>
+  {{token}}
+</h3>
 
+<br>
+<br>
 <!-- Show Params -->
 <div *ngIf="apiCall.params">
     <label>name: </label>
