--- a/src/app/api-call/api-call.component.html
+++ b/src/app/api-call/api-call.component.html
@@ -12,40 +12,26 @@
 
 
 <!-- login in form -->
-<form [formGroup]="loginForm" (ngSubmit)="doLogin($event)">
+<form [formGroup]="getRequestForm" (ngSubmit)="onSubmit()" *ngIf="apiCall.httpVerb == 'GET'">
   <div class="" *ngFor="let paramKey of paramKeys()">
-    <input formControlName="{{paramKey}}" type="text" placeholder="Your email">
+    <label for="">{{paramKey}} : </label>
+    <input formControlName="{{paramKey}}" type="text">
     <input formControlName="{{paramKey}}Checked" type="checkbox" value="true">
   </div>
     <!-- <input type="checkbox" id="cbox1" value="first_checkbox"> This is the first checkbox</label> -->
-  <button type="submit">Log in</button>
+  <button type="submit" name="Submit" class="btn btn-primary">Submit</button>
 </form>
 
 
-
-<!-- Show Params -->
-<div *ngFor="let paramKey of paramKeys()" class="cutomForm">
-  <div class="form-group">
-    <div class="input-group">
-
-      <label>{{paramKey}}: </label>
-      <input class="form-control" [(ngModel)]="apiCall.params[paramKey]"/>
-
-      <button type="button" class="btnClose" aria-label="Close text-danger" (click)="removeParam(paramKey)">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-  </div>
-</div>
-
 <!-- Show Payload -->
-<div class="form-group" *ngIf="apiCall.httpVerb == 'POST'">
-  <label for="payload">Pyaload:</label>
-  <textarea class="form-control" rows="5" id="comment" [(ngModel)]="apiCall.payload"></textarea>
+<div  *ngIf="apiCall.httpVerb == 'POST'">
+  <div class="form-group">
+    <label for="payload">Pyaload:</label>
+    <textarea class="form-control" rows="5" id="comment" [(ngModel)]="apiCall.payload"></textarea>
+  </div>
+
+  <button type="button" name="Submit" class="btn btn-primary" (click)="onSubmit()">Submit</button>
 </div>
-
-<button type="button" name="Submit" class="btn btn-primary" (click)="onSubmit()">Submit</button>
-
 
 <br>
 <br>
