api-url text fixed

--- a/src/app/api-call/api-call.component.html
+++ b/src/app/api-call/api-call.component.html
@@ -1,5 +1,5 @@
-<h3>
-  <label>ApiUrl : </label>
+<h3 class='api-url'>
+  <span class="label label-default">{{apiCall.httpVerb}} :</span>
   {{apiCall.url}}
 </h3>
 
