--- a/src/app/api-call/api-call.component.css
+++ b/src/app/api-call/api-call.component.css
@@ -23,3 +23,11 @@
   font-size: 18px;
   font-weight: 800;
 }
+
+.api-url {
+  text-align: right;
+  font-style: italic;
+}
+.api-url > span {
+  font-style: normal;
+}
